# Diffracture

./: README.md  pyproject.toml
diffracture/: __init__.py  actant.py  registry.py
diffracture/injection/: base_injector.py  direct_injector.py  graft_injector.py  hook_injector.py  parametrize_injector.py
diffracture/kernels/: base_kernel.py  dora_kernel.py  kernel.py  lora_kernel.py
diffracture/topology/: __init__.py  base_element.py  base_prism.py  dora.py  grating.py  lattice.py  lora.py
scripts/: conversion.py  convert_loraw.py  validate_injection.py
